--- a/dashboard/templates/includes/sidenav.html
+++ b/dashboard/templates/includes/sidenav.html
@@ -274,6 +274,27 @@
           </li>
         </ul>
 
+        <!-- Services -->
+        <h6 class="navbar-heading p-0 text-muted border-bottom">
+          <span class="docs-normal">Services</span>
+        </h6>
+        <ul class="navbar-nav mb-md-3">
+          <li class="nav-item">
+            {% url 'service_category' as service_category_url %}
+            <a class="nav-link{% if current_path == service_category_url %} active{% endif %}" href="{{ service_category_url }}">
+              <i class="ni ni-bullet-list-67"></i>
+              <span class="nav-link-text">Service Categories</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            {% url 'services' as services_url %}
+            <a class="nav-link{% if current_path == services_url %} active{% endif %}" href="{{ services_url }}">
+              <i class="ni ni-briefcase-24"></i>
+              <span class="nav-link-text">Services</span>
+            </a>
+          </li>
+        </ul>
+
         <!-- Orders & Shipping -->
         <h6 class="navbar-heading p-0 text-muted border-bottom">
           <span class="docs-normal">Orders</span>
